# task3

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  main  main.py  newresult.docx  pyproject.toml
.github/workflows/: ci.yml
